<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="game.programming.whileloop.canvas_game.MultiplayerActivity">

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen">
        <ImageView
            android:src="@mipmap/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <TextView
            android:paddingTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#323232"
            android:textAlignment="center"
            android:text="Programming Teacher - Multiplayer"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"/>
        <Button android:id="@+id/button_sign_in"
            style="@style/MenuButton"
            android:text="Sign In"/>
        <Button android:id="@+id/button_single_player"
            style="@style/MenuButton"
            android:background="#fd9900"
            android:onClick="Go_Main"
            android:text="Main Menu" />
    </LinearLayout>


    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <ImageView
            android:src="@mipmap/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <TextView
            android:paddingTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#323232"
            android:textAlignment="center"
            android:text="Programming Teacher - Multiplayer"
            android:textSize="20sp"/>

        <LinearLayout
            android:paddingTop="25dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/quick_game_explanation" />
            <Button
                android:id="@+id/button_quick_game"
                style="@style/MenuButton"
                android:text="Quick Game"/>

            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/invite_players_explanation" />
            <Button
                android:id="@+id/button_invite_players"
                style="@style/MenuButton"
                android:text="@string/invite_players"/>

            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/see_invitations_explanation" />
            <Button
                android:id="@+id/button_see_invitations"
                style="@style/MenuButton"
                android:text="@string/see_invitations"/>

            <Button
                style="@style/MenuButton"
                android:background="#fd9900"
                android:onClick="Go_Main"
                android:text="Main Menu"/>
        </LinearLayout>
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAME OVER SCREEN -->
    <LinearLayout
        android:id="@+id/screen_gameover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="GAME OVER"
            android:textColor="@color/AccentColor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <ImageView
            android:src="@mipmap/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/winloose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="YOU WON"
                android:textColor="#228B22"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center_vertical|center_horizontal"
                />
            <TextView
                android:id="@+id/winlostpoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="By 18 Points"
                android:textColor="#005476"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:gravity="center_vertical|center_horizontal"
                />

            <Button
                android:layout_gravity="center"
                android:background="#fd9900"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:onClick="Go_Main"
                android:text="Main Menu"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout
        android:id="@+id/screen_game"
        style="@style/LLScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!-- Scores -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="vertical">
            <LinearLayout style="@style/ScoresBox">
                <TextView style="@style/ScoreInfo" android:background="#23e900" android:text="You"/>
                <TextView style="@style/ScoreInfo" android:text="Time Left"/>
                <TextView android:id="@+id/opponame" style="@style/ScoreInfo" android:background="#e90000" android:text="Opponent"/>
            </LinearLayout>
            <LinearLayout style="@style/ScoresBox">
                <TextView android:id="@+id/score0" android:background="#7dff66" style="@style/ScoreText" />
                <TextView android:id="@+id/countdown" style="@style/FigureLabel" />
                <TextView android:id="@+id/score1" android:background="#ef6060" style="@style/ScoreText"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            >
            <!-- Question -->
            <TextView android:id="@+id/instructions"
                style="@style/Instruction_title" android:text="Title" />
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView android:id="@+id/description"
                    style="@style/Instruction_body" android:text="Description" />
            </ScrollView>
        </LinearLayout>

        <!--<TextView android:id="@+id/my_score" style="@style/ScoreDisplay" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_gravity="bottom"
            >
            <LinearLayout style="@style/OptionsBox">

                <Button
                    android:id="@+id/option1"
                    style="@style/OptionButton"
                    android:background="@color/color_option1"
                    android:text="Option 01" />
                <Button android:id="@+id/option2"
                    style="@style/OptionButton"
                    android:background="@color/color_option2"
                    android:text="Option 02" />

            </LinearLayout>
            <LinearLayout style="@style/OptionsBox">
                <Button android:id="@+id/option3"
                    style="@style/OptionButton"
                    android:background="@color/color_option3"
                    android:text="Option 03" />
                <Button android:id="@+id/option4"
                    style="@style/OptionButton"
                    android:background="@color/color_option4"
                    android:text="Option 04" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
